--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
               <a class="nav-link" href="./destination.html"><span>02</span> DESTINATION</a>
             </li>
             <li class="nav-item ms-4">
-              <a class="nav-link" href="./crew-commander.html"><span>03</span> CREW</a>
+              <a class="nav-link" href="./crew.html"><span>03</span> CREW</a>
             </li>
             <li class="nav-item ms-4">
-              <a class="nav-link" href="./technology-vehicle.html"><span>04</span> TECHNOLOGY</a>
+              <a class="nav-link" href="./technology.html"><span>04</span> TECHNOLOGY</a>
             </li>
           </ul>
         </div>
